# voxcoach

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  SDD.md  hortlog -sne --all  pyproject.toml
docs/stories/: README.md  US01-tray-start-stop.md  US02-config-api-key.md  US03-deteccao-automatica-partida.md  US04-dicas-por-voz.md  US05-anti-spam.md  US06-voz-e-idioma.md  US07-sem-risco-de-ban.md  US08-novo-jogo-via-interface.md
scripts/: capture_fixture.py
src/voxcoach/: __init__.py  __main__.py  cli.py  config.py  engine.py  factory.py  main.py  models.py  orchestrator.py  voice.py
src/voxcoach/adapters/: __init__.py  base.py  lol.py
src/voxcoach/llm/: __init__.py  base.py  claude.py  prompts.py
src/voxcoach/processor/: __init__.py  processor.py  triggers.py
src/voxcoach/tts/: __init__.py  base.py  edge.py  player.py
tests/: test_adapters.py  test_engine.py  test_llm.py  test_orchestrator.py  test_processor.py  test_tts.py  test_voice.py
tests/fixtures/: allgamedata.json
